# file-adder

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml.example
src/: dirs.rs  error.rs  interaction.rs  main.rs
